--- a/indexJs.html
+++ b/indexJs.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing Javascript & VUE</title>
-    <script src="../testingJavascriptVue/js/index.js"></script>
-    <link rel="icon" type="image/jpg" href="../testingJavascriptVue/img/w4g.jpg"/>
+    <title>Javascript</title>
+    <script src="/js/index.js"></script>
+    <link rel="icon" type="image/x-icon" href="/img/favicon.ico">
 
 </head>
 
